@@ -20,7 +20,13 @@ class SearchApiText extends SearchApiString {
     $operators['=']['title'] = $this->t('contains');
     $operators['!=']['title'] = $this->t("doesn't contain");
 
-    $operators = array_intersect_key($operators, ['=' => 1, '!=' => 1]);
+    $supported_operators = [
+      '=' => 1,
+      '!=' => 1,
+      'empty' => 1,
+      'not empty' => 1,
+    ];
+    $operators = array_intersect_key($operators, $supported_operators);
 
     return $operators;
   }
